--- a/scripts/puppeteer/package.json
+++ b/scripts/puppeteer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^19.11.1",
+    "puppeteer-core": "^19.11.1"
   }
 }
